Fix menu jumping mentioned in #122

--- a/extensions/menu/deck.menu.scss
+++ b/extensions/menu/deck.menu.scss
@@ -1,8 +1,6 @@
-.csstransforms.deck-menu-html {
-	overflow:auto;
-}
-
 .deck-menu {
+	overflow:auto;
+
 	.slide {
 		background:#eee;
 		position:relative;
